<resources>
    <string name="app_name">Users</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">Details</string>
    <string name="connection_time_out">Connection time out</string>
    <string name="internet_error_message">please check your internet connection and try again</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="you_re_offline">You\'re offline</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="user_not_authorized">User is not Authorized</string>
    <string name="we_can_t_find_any_users">We can\'t find any users</string>
</resources>
